--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.1"
   }
