--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "bootstrap": "^5.3.3",
     "next": "14.2.1",
     "react": "^18",
+    "react-devtools": "^5.1.0",
     "react-dom": "^18",
-    "react-loader-spinner": "^6.1.6"
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
