--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "14.2.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
